@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2007-08-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/pixel_cache.c (ClonePixelCacheMethods): Remove DLL export.
+        (DestroyCacheInfo): Remove DLL export.
+        (GetCacheInfo): Remove DLL export.
+        (ReferenceCache): Remove DLL export.
+
+</UL>
+<p>
 2007-08-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
